
2008-07-30:
	Version 0.2
	multi-select. The user now can select multible datasources.
	  There might be problems if rrd-layout differs between datasources
	some cleanup

2008-07-23
	some cleanup, time-axes

2008-07-14
	removed the label displaying the datasource
	added last-{hour,day,week,month}-buttons
	added some sensiblity-checks to zooming
	fixed Qt-problem with strftimes localized output
	some more comments
	color_-variables
	KDE-defaultcolor for text
	translation de fixed
	name as a graph-label (but inactive)

2008-07-10
	translation
	