@@ -18,8 +18,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#include <iostream>
-
 #include <qlayout.h>
 #include <qlabel.h>
 #include <qwidget.h>
